<resources>
    <string name="Search">Search</string>
    <string name="app_name">DigiBoxx Demo</string>
    <string name="get_started">Get Started</string>
    <string name="Workspace">Digispace</string>
    <string name="Forgot_password"><u>Forgot password?</u></string>
    <string name="Submit">Submit</string>
    <string name="Enter_your">Enter your</string>
    <string name="Continue">Continue</string>
    <string name="recovery_message">One time password has been sent to your registered Mobile Number.</string>
    <string name="Reset">Reset</string>
    <string name="Quick_access">Quick Access</string>
    <string name="quick_access_subtitle">Assets modified in the last 7 days</string>
    <string name="Myboxx">MyBoxx</string>
    <string name="mybox_subtitle">Find and share assets</string>
    <string name="Resources">Resources</string>
    <string name="resources_subtitle">Find all your assets</string>
    <string name="Starred">Starred</string>
    <string name="starred_subtitle">Flag critical assets</string>
    <string name="Logout">Logout</string>
    <string name="Upgrade">Upgrade</string>
    <string name="upgrade_link" translatable="false"><u>Upgrade</u></string>
    <string name="English">English - EN</string>
    <string name="HindiL">हिन्दी - HI</string>
    <string name="MarathiL">मराठी - MR</string>
    <string name="KannadaL">ಕನ್ನಡ - KN</string>
    <string name="MalayalamL">മലയാളം - ML</string>
    <string name="OriyaL">ଓଡିଆ - OR</string>
    <string name="TamilL">தமிழ் - TA</string>
    <string name="TeluguL">తెలుగు - TE</string>
    <string name="BanglaL">বাংলা - BN</string>
    <string name="Try_Again">Try Again</string>
    <string name="Incorrect_workspace">Incorrect Digispace</string>
    <string name="workspace_mess">Details entered does not match with our records</string>
    <string name="Incorrect_password">Incorrect password</string>
    <string name="Create_folder">Create Folder</string>
    <string name="rename">Rename</string>
    <string name="Folder_Name">Folder name</string>
    <string name="create_new_folder">Create Folder</string>
    <string name="upload_new_file">Upload File(s)</string>
    <string name="delete">Delete</string>
    <string name="restore">Restore</string>
    <string name="Delete_permenantly">Delete permanently</string>
    <string name="Share">Share</string>
    <string name="emplty">Empty Here</string>
    <string name="overview">Overview</string>
    <string name="embed">Embed</string>
    <string name="comments">Comments</string>
    <string name="file_tags">File tags</string>
    <string name="file_name">File name</string>
    <string name="Description">Description</string>
    <string name="activity_logs">Activity logs</string>
    <string name="file_viewed">File viewed</string>
    <string name="Copied">Copied</string>
    <string name="file_downloaded">File downloaded</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="cancel">Cancel</string>
    <string name="Are_you_sure">Are you sure?</string>
    <string name="commented_message" translatable="false">You and %s others commented on this file</string>
    <string name="download_messages" translatable="false">You and %s others downloaded this file</string>
    <string name="viewed_messgae" translatable="false">You and %s others viewed this file</string>
    <string name="Download_in_process">Download in process</string>
    <string name="download_notification">You will get a notification once the download is complete</string>
    <string name="Okay_Got_It">Okay, Got It</string>
    <string name="delete_permission">"You don't have an access to delete"</string>
    <string name="organising_better">Organising Better</string>
    <string name="Sort_by">Sort by</string>
    <string name="size">Size :</string>
    <string name="Name">Name</string>
    <string name="type">Type</string>
    <string name="Apply">Apply</string>
    <string name="profile_updated_mess">Profile updated Successfully</string>
    <string name="Storage_utilized">Storage utilized</string>
    <string name="Storage_remaining">Storage remaining</string>
    <string name="Activity_graph">Activity Graph</string>
    <string name="activity_message">Track and monitor your team’s usage and output over time by assets uploaded and assigned.</string>
    <string name="activity_message_free_paid" translatable="false">Track and monitor your usage and output over time by assets uploaded and assigned.</string>
    <string name="Mobile_number">Mobile number</string>
    <string name="Recovery_code_will_expire_time">You can resend OTP in  </string>
    <string name="seconds">" seconds"</string>
    <string name="Email_address">Email address</string>
    <string name="email_send">Email sent</string>
    <string name="OK">Ok</string>
    <string name="Reset_Password">Reset Password</string>
    <string name="password_chnaged_successfully">Password has been changed successfully</string>
    <string name="No_result_found">No Results!!</string>
    <string name="Assets">Assets</string>
    <string name="Pie">Pie</string>
    <string name="Graph">Graph</string>
    <string name="All_time">All time</string>
    <string name="Week">Week</string>
    <string name="Month">Month</string>
    <string name="Date_Range">Date Range</string>
    <string name="Assets_uploaded">Assets uploaded</string>
    <string name="uploaded">Uploaded</string>
    <string name="assigned">Assigned</string>
    <string name="View">View</string>
    <string name="Organization">Organization</string>
    <string name="Detailed_Analytics">Detailed Analytics</string>
    <string name="Assets_type">Assets type</string>
    <string name="Users">Users</string>
    <string name="Department">Department</string>
    <string name="assetUploaded">Assets uploaded</string>
    <string name="roles">Roles</string>
    <string name="designation">Designation</string>
    <string name="departments">Departments</string>
    <string name="create_new_department">Create new department</string>
    <string name="department">Department</string>
    <string name="full_name">Full name</string>
    <string name="role">Role</string>
    <string name="password">Password</string>
    <string name="allocate_memory">Allocate memory</string>
    <string name="notifications">Notifications</string>
    <string name="Change_Password">Change Password</string>
    <string name="Old_Password">Old Password</string>
    <string name="New_Password">New Password</string>
    <string name="Confirm_Password">Confirm new password</string>
    <string name="Feedback">Feedback</string>
    <string name="subscription">Subscription</string>
    <string name="request_pending">Requests pending</string>
    <string name="file_format">File format</string>
    <string name="file_size">File size</string>
    <string name="Create_new_user">Create a new user</string>
    <string name="team">Team</string>
    <string name="account">Account</string>
    <string name="Profile">Profile</string>
    <string name="Dashboard">Dashboard</string>
    <string name="Setting">Settings</string>
    <string name="Team">Team</string>
    <string name="Help_Center">Help Center</string>
    <string name="user_end_date">User end date</string>
    <string name="assetsAssigned">Assets assigned</string>
    <string name="Change_Your_Current_Password">Change your current password</string>
    <string name="No_Data_available">No Data available</string>
    <string name="selectFolderColor">Select folder color</string>
    <string name="selectAll">Select All</string>
    <string name="twoFactorAuthentication">Two-factor authentication</string>
    <string name="clearAll">Clear All</string>
    <string name="Remove">Remove</string>
    <string name="none">None</string>
    <string name="otp">OTP</string>
    <string name="announcement">Announcement</string>
    <string name="enterDigispace">Enter Digispace</string>
    <string name="DeactivateTheAccount">"Deactivate the account "</string>
    <string name="Deactivate">Deactivate</string>
    <string name="pleaseSelectYourReason">Please select your reason.</string>
    <string name="app_version">App Version</string>
    <string name="OneStepTowards">One step towards</string>
    <string name="ForgotPassword"><u>Forgot password?</u></string>
    <string name="ForgotDigispace"><u>Forgot Digispace?</u></string>
    <string name="MyBoxx">MyBoxx</string>
    <string name="QuickAccess">Quick access</string>
    <string name="RecycleBin">Recycle Bin</string>
    <string name="renameFolder">Rename folder</string>
    <string name="folderColor">Change folder color</string>
    <string name="ContactSupport">Contact Support</string>
    <string name="ManageProfile">Manage Profile</string>
    <string name="AutoSync">Auto Sync</string>
    <string name="Create_Folder_Name">Type folder name here</string>
    <string name="Embed">Embed</string>
    <string name="EmbedAsset">Embed asset</string>
    <string name="EmbedAssetDesc">Choose a file/folder from DigiBoxx or from the Device and share it with your connections.</string>
    <string name="LinkType">Link type</string>
    <string name="Public">Public</string>
    <string name="Private">Private</string>
    <string name="AssetEmbedLink">Asset embed link</string>
    <string name="overView">Overview</string>
    <string name="FileTags">File tags</string>
    <string name="Notification">Notification</string>
    <string name="send_otp">Send OTP</string>
    <string name="OtpSend">OTP sent</string>
    <string name="OtpMessage">OTP has been sent to your registered Mobile Number</string>
    <string name="pleaseEnterEmail">Please enter Email</string>
    <string name="pleaseEnterDigiSpace">Please enter digispace</string>
    <string name="pleaseEnterPassword">Please enter password</string>
    <string name="pleaseEnterMobileNo">Please enter mobile no.</string>
    <string name="Announcement">Announcement</string>
    <string name="Cancel">Cancel</string>
    <string name="DoYouWantToAutoSyncDocument">Do you want to AutoSync your documents files?</string>
    <string name="update">Update</string>
    <string name="AreYouSure">Are you sure?</string>
    <string name="deleteFolderMessage">Deleting this file will also delete all the related information with this file</string>
    <string name="filter">Filter</string>
    <string name="add">Add</string>
    <string name="download">Download</string>
    <string name="enter_password">Enter Password</string>
    <string name="save">Save</string>
    <string name="details">Details</string>
    <string name="login">Log in</string>
    <string name="share">Share</string>
    <string name="edit" translatable="false">Edit</string>
    <string name="firstTimeUser" translatable="false">First time user?</string>
    <string name="sign_up" translatable="false"><u>Sign up</u></string>
    <string name="menu_item_save_as" translatable="false">Set as</string>
    <string name="menu_item_move_to" translatable="false">Move to</string>
    <string name="add_to_album" translatable="false">Add to album</string>
    <string name="delete_album" translatable="false">Delete album</string>
    <string name="remove_asset" translatable="false">Remove asset</string>
    <string name="back_button_content_description" translatable="false">Back Button</string>
    <string name="print" translatable="false">Print</string>
    <string name="album_cover" translatable="false">Album cover</string>
    <string name="comment" translatable="false">Comment</string>
    <string name="album_settings" translatable="false">Album settings</string>
    <string name="never_miss_any_of_your_pics_videos_certifications_ppts_and_spreadsheets_ever">Never miss any of your pics, videos, certifications, PPTs and spreadsheets ever.</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
</resources>